# esy

./: .babelrc  .depends  .dockerignore  .flowconfig  .gitattributes  .gitignore  .gitmodules  .ocamlformat  .prettierrc  .travis.yml  404.html  CHANGELOG.md  CNAME  Dockerfile  LICENSE  Makefile  OPAM-2-TODO.md  README.esyi.md  README.md  SetLongPathRegistry.ps1  TODO.md  appveyor.yml  boot-esy.js  bootstrap.org  bug-repro.js  build.sh  dep.dot  deps.sh  dune  dune-project  dune-workspace  esy  esy-build-package.install  esy-lib.install  esy-solve.install  esy.cmd  esy.install  esy.json  esy.lock.json  esy.opam  (+20 more)
esy-build/: BuildId.ml  BuildId.re  BuildId.rei  BuildInfo.re  BuildInfo.rei  BuildSandbox.ml  BuildSandbox.re  BuildSandbox.rei  BuildSpec.ml  BuildSpec.mli  BuildSpec.re  BuildSpec.rei  EnvSpec.re  EnvSpec.rei  EsyBuildPackageApi.ml  EsyBuildPackageApi.re  EsyBuildPackageApi.rei  EsyRc.re  EsyRc.rei  FindlibConf.re  FindlibConf.rei  ReadBuildManifest.re  ReadBuildManifest.rei  Scope.re  Scope.rei  dune
esy-build-package/: BigSurArm.re  Build.re  Build.rei  BuildInfo.re  BuildInfo.rei  BuildTask.re  BuildType.rei  Builder.re  Builder.rei  Cmd.re  Cmd.rei  Config.re  Config.rei  EsyBash.re  EsyLib.install  Install.ml  Install.mli  Install.re  Install.rei  Json.re  Makefile  NodeResolution.re  PathSyntax.re  PathSyntax.rei  Plan.re  Plan.rei  README.md  Run.re  Run.rei  Sandbox.re  Sandbox.rei  SourceType.re  SourceType.rei  Std.re  Store.re  Task.re  Task.rei  TaskConfig.re  TaskConfig.rei  dune  (+7 more)
esy-build-package/esy/: esy.ml  esy.re  jbuild
esy-build-package/esy-build-package/: esyBuildPackage.re  jbuild
esy-build-package/esy-core/: Build.ml  BuildTask.ml  CommandExpr.ml  CommandExpr.mll  CommandExprParser.mll  CommandExprParserSupport.ml  CommandExprSupport.ml  Config.ml  DependencyGraph.ml  Environment.ml  Io.ml  Io.mli  Io.re  Manifest.ml  Memoize.re  Package.ml  PackageBuilder.ml  PackageBuilder.mli  Run.ml  Run.mli  RunAsync.ml  RunAsync.mli  Sandbox.mli  Sandbox.re  ShellParamExpansion.ml  System.ml  jbuild
esy-build-package/esy-lib/: BuildTask.re  Builder.re  Path.re  PathSyntax.re  Result.re  Run.re  jbuild
esy-build-package/esy-test/: CommandExpr.ml  ShellParamExpansion.ml  TestCommandExpr.ml
esy-build-package/fixtures/: failing.json  simple.json
esy-command-expression/: EsyCommandExpression.ml  EsyCommandExpression.mli  EsyCommandExpression.re  EsyCommandExpression.rei  Lexer.mll  Parser.mly  Types.ml  Types.re  dune
esy-fetch/: Config.re  Config.rei  DistResolver.re  DistResolver.rei  DistStorage.re  DistStorage.rei  ExtraSources.re  Fetch.re  Fetch.rei  FetchPackage.re  FetchPackage.rei  HoistedNodeModulesGraph.re  HoistingAlgorithm.re  Installation.rei  Js.re  JsUtils.re  JsUtils.rei  Lineage.re  NodeModule.re  NodeModule.rei  NodeModuleLinker.re  NodeModuleLinker.rei  NpmPackageJson.re  NpmPackageJson.rei  OpamAvailable.re  OpamAvailable.rei  Override.re  Override.rei  Overrides.re  Package.re  Package.rei  PackagePaths.re  PkgSpec.re  PkgSpec.rei  PnpJs.re  ProjectList.re  Sandbox.re  Sandbox.rei  SandboxSpec.re  SandboxSpec.rei  (+7 more)
esy-lib/: #Run.re#  Abstract.ml  Abstract.re  BuildType.re  BuildType.rei  Chalk.re  Checksum.ml  Checksum.mli  Checksum.re  Checksum.rei  ChildProcess.ml  ChildProcess.mli  ChildProcess.re  ChildProcess.rei  Cli.ml  Cli.re  Cmd.ml  Cmd.mli  Cmd.re  Cmd.rei  Curl.ml  Curl.mli  Curl.re  Curl.rei  DependencyGraph.ml  Digestv.ml  Digestv.mli  Digestv.re  Digestv.rei  DumpToFile.re  DumpToFile.rei  Environment.ml  Environment.mli  Environment.re  Environment.rei  EsyBash.re  EsyBash.rei  EsyBashLwt.re  EsyLinkFile.ml  EsyLinkFile.mli  (+99 more)
esy-package-config/: AvailablePlatforms.re  AvailablePlatforms.rei  BuildEnv.ml  BuildEnv.mli  BuildEnv.re  BuildEnv.rei  BuildManifest.ml  BuildManifest.mli  BuildManifest.re  BuildManifest.rei  BuildType.re  BuildType.rei  Command.ml  Command.mli  Command.re  Command.rei  CommandList.ml  CommandList.mli  CommandList.re  CommandList.rei  Dist.ml  Dist.re  Dist.rei  DistPath.ml  DistPath.re  DistPath.rei  ExportedEnv.ml  ExportedEnv.mli  ExportedEnv.re  ExportedEnv.rei  ExtraSource.re  File.ml  File.mli  File.re  File.rei  InstallConfig.re  InstallConfig.rei  InstallManifest.ml  InstallManifest.mli  InstallManifest.re  (+77 more)
esy-solve/: Config.re  Config.rei  DepSpec.ml  DepSpec.re  DepSpecBase.ml  DepSpecParser.mly  NpmRegistry.ml  NpmRegistry.mli  NpmRegistry.re  NpmRegistry.rei  OpamManifest.ml  OpamManifest.mli  OpamManifest.re  OpamManifest.rei  OpamOverrides.re  OpamOverrides.rei  OpamRegistries.re  OpamRegistries.rei  OpamRegistry.ml  OpamRegistry.mli  OpamRegistry.re  OpamRegistry.rei  OpamRepository.re  OpamRepository.rei  OpamResolution.ml  OpamResolution.mli  OpamResolution.re  OpamResolution.rei  Package.ml  Package.mli  PackageJson.ml  PackageJson.mli  PkgSpec.ml  Resolver.ml  Resolver.mli  Resolver.re  Resolver.rei  Sandbox.ml  Sandbox.mli  Sandbox.re  (+16 more)
esy-yarn-lockfile/: EsyYarnLockfile.ml  EsyYarnLockfile.mli  Lexer.mll  Parser.mly  Printer.ml  Types.ml  dune
esyi/: .gitattributes  .gitignore  .npmignore  Config.re  Config.rei  CudfVersions.re  DebianVersion.ml  DebianVersion.mli  DepSpec.ml  DepSpec.mli  Dist.ml  Dist.mli  DistPath.ml  DistPath.mli  DistResolver.ml  DistResolver.mli  DistStorage.ml  DistStorage.mli  Env.re  EsyLinkFile.ml  EsyLinkFile.mli  EsyOpamFile.ml  EsyOpamFile.mli  Fetch.ml  Fetch.mli  Fetch.re  FetchStorage.ml  FetchStorage.mli  File.ml  File.mli  GenericVersion.re  Github.re  Infix.re  Installation.ml  Installation.mli  Lockfile.ml  Lockfile.mli  LockfileV1.ml  LockfileV1.mli  Makefile  (+104 more)
esyi/fetch/: Fetch.re  (+8 more)
fastreplacestring/: dune  fastreplacestring.cpp  fastreplacestring.re  fastreplacestring.rei
test/: Checksum.ml  Checksum.re  CommandExpr.ml  Curl.ml  Curl.re  EsyBashLwt.ml  EsyBashLwt.re  Fs.ml  Fs.re  LockfileParser.ml  Patch.ml  Patch.re  ShellParamExpansion.ml  Store.ml  Store.re  Tarball.ml  Tarball.re  Task.ml  TestHarness.ml  TestHarness.re  TestLwt.ml  dune  jbuild
test-unit/: RunUnitTests.re  TestFramework.re  TestFs.re  dune
(+3649 files in other folders)
