opam-version:  "2.0"
synopsis:  "A package.json driven package manager for Reason and OCaml"
version:  "0.6.7"
license:  "MIT"
homepage:  "https://github.com/esy/esy"
doc:  "https://esy.sh"
bug-reports:  "https://github.com/esy/esy/issues"
authors:  [
  "Andrey Popp"
  "Manas Jayanth"
  "Ulrik Strid"
  "Bryan Phelps"
  "Eduardo Rafael"
]
maintainer:  [
  "Andrey Popp"
  "Manas Jayanth"
]
dev-repo:  "git+https://github.com/esy/esy.git"
depends:  [
    "cudf"  { = "0.9" }
    "dose3"  { = "5.0.1" }
    "dune"  { = "2.6.0" }
    "fmt"  { = "0.8.8" }
    "fpath"  { = "0.7.2" }
    "lambda-term"  { = "2.0.2" }
    "logs"  { = "0.7.0" }
    "lwt"  { = "4.4.0" }
    "lwt_ppx"  { = "1.2.4" }
    "menhir"  { = "20200211" }
    "ocamlformat"  { = "0.15.0" }
    "opam-core"  { = "2.0.5" }
    "opam-file-format"  { = "2.0.0" }
    "opam-format"  { = "2.0.5" }
    "opam-state"  { = "2.0.5" }
    "ppx_deriving"  { = "4.5" }
    "ppx_deriving_yojson"
    "ppx_expect"  { = "v0.13.1" }
    "ppx_inline_test"  { = "v0.13.0" }
    "ppx_let"  { = "v0.13.0" }
    "ppx_sexp_conv"  { = "v0.13.0" }
    "re"  { = "1.9.0" }
    "reason" 
    "yojson"  { = "1.7.0" }
    "ocaml"  { >= "4.10.0" }
]
build:  [
  ["dune" "build" "-p" name "-j" jobs]
]
description:  "package.json driven package manager for Reason and OCaml"
             
