(library
 (name EsyBuild)
 (preprocess
  (pps ppx_inline_test lwt_ppx ppx_let ppx_deriving_yojson ppx_deriving.std))
 (flags
  (:standard
   (-w -39)
   "-open"
   "EsyLib"))
 (libraries EsyLib EsyInstall EsyCommandExpression EsyShellExpansion
   EsyBuildPackage lwt lwt.unix cmdliner yojson bos logs logs.fmt logs.lwt
   logs.cli re fmt fmt.cli fmt.tty ppx_deriving_yojson.runtime str astring
   opam-format opam-state))
