(library
 (name EsyBuild)
 (preprocess
  (pps ppx_inline_test lwt_ppx ppx_let ppx_deriving_yojson ppx_deriving.std))
 (flags
  (:standard
   (-w -39)
   "-open"
   "EsyLib"))
 (libraries EsyPrimitives EsyLib EsyFetch EsyCommandExpression
   EsyShellExpansion EsyBuildPackage lwt lwt.unix esy.cmdliner yojson bos
   esy.logs esy.logs.fmt esy.logs.lwt esy.logs.cli re esy.fmt esy.fmt.cli
   esy.fmt.tty ppx_deriving_yojson.runtime str astring opam-format opam-state))
