(library
 (name EsyBuild)
 (preprocess
  (pps ppx_inline_test lwt_ppx ppx_let ppx_deriving_yojson ppx_deriving.std))
 (flags
  (:standard
   (-w -39)
   "-open"
   "EsyLib"))
 (libraries
  EsyPrimitives
  EsyLib
  EsyFetch
  EsyCommandExpression
  EsyShellExpansion
  EsyBuildPackage
  lwt
  lwt.unix
  esy_cmdliner
  yojson
  bos
  esy_logs
  esy_logs_fmt
  esy_logs_lwt
  esy_logs_cli
  re
  esy_fmt
  esy_fmt_cli
  esy_fmt_tty
  ppx_deriving_yojson.runtime
  str
  astring
  opam-format
  opam-state))
