(library
 (name EsyLib)
 (flags
  (:standard
   (-w -39)))
 (inline_tests)
 (libraries angstrom lwt lwt.unix esy.cmdliner yojson bos esy.logs
   esy.logs.fmt esy.logs.lwt esy.logs.cli re esy.fmt esy.fmt.cli esy.fmt.tty
   ppx_deriving_yojson.runtime str astring EsyShellExpansion)
 (foreign_stubs
  (language c)
  (names unix_rlimit_patch win32_path))
 (preprocess
  (pps lwt_ppx ppx_let ppx_deriving_yojson ppx_deriving.std ppx_expect
    ppx_inline_test ppx_sexp_conv)))

(ocamllex
 (modules ShellSplit))
