(library
 (name EsySolve)
 (inline_tests)
 (flags
  (:standard
   (-w -39)
   "-open"
   "EsyLib"))
 (libraries EsyPrimitives EsyLib EsyFetch angstrom str cudf
   ppx_deriving_yojson.runtime yojson logs logs.lwt dose3.algo opam-format
   opam-state opam-file-format pastel.lib)
 (preprocess
  (pps
   lwt_ppx
   ppx_let
   ppx_deriving.std
   ppx_deriving_yojson
   ppx_expect
   ppx_inline_test
   ppx_sexp_conv)))
