(library
  (name EsyYarnLockfile)
  (inline_tests)
  (preprocess (pps ppx_inline_test ppx_expect ppx_sexp_conv ppx_let ppx_deriving.std))
  (flags (:standard (-w -39) "-open" "EsyLib"))
  (libraries EsyLib ppx_deriving.std)
)

(ocamllex (modules Lexer))

(menhir
  (flags "--explain" "--external-tokens" "Types")
  (modules Parser)
  )
