(library
  (name EsyInstall)
  (preprocess (pps
                  lwt_ppx ppx_let
                  ppx_deriving.std
                  ppx_deriving_yojson
                  ppxlib
                  ppx_inline_test))
  (inline_tests)
  (flags (:standard (-w -39) "-open" "EsyLib"))
  (libraries
            EsyLib
            str
            cudf
            ppx_deriving_yojson.runtime
            yojson
            logs
            logs.lwt
            dose3.algo
            opam-format
            opam-file-format)
  )
