(library
    (name FastReplaceString)
    (flags (-ccopt "-link -static" -ccopt "-link -static-libgcc" -ccopt "-link -static-libstdc++" -ccopt -lstdc++))
    (libraries EsyLib)
    (cxx_flags (-static -static-libgcc -static-libstdc++ -lstdc++ -fno-exceptions -fno-rtti))
    (cxx_names fastreplacestring))
