(library
  (name fastreplacestring)
  (libraries EsyLib)
  (modules fastreplacestring)
  (flags (:include config/dune.flags))
  (cxx_names fastreplacestring)
  (cxx_flags (:include config/dune.cxx_flags))
  (library_flags (:include config/dune.flags))
  (c_library_flags (:include config/dune.cflags))
  )
