(library
 (name fastreplacestring)
 (modules fastreplacestring)
 (flags
  (:include config/dune.flags))
 (foreign_stubs
  (language cxx)
  (names fastreplacestring)
  (flags
   (:include config/dune.cxx_flags)))
 (library_flags
  (:include config/dune.flags))
 (c_library_flags
  (:include config/dune.cflags)))
