(library
 (name TestE2E)
 (ocamlopt_flags -linkall -g)
 (libraries EsyLib EsyPackageConfig rely.lib esy.logs esy.logs.cli
   esy.cmdliner bos esy.fmt esy.fmt.cli esy.fmt.tty rresult)
 (preprocess
  (pps lwt_ppx ppx_let ppx_deriving.std ppx_deriving_yojson ppxlib ppx_expect
    ppx_inline_test ppx_sexp_conv))
 (modules
  (:standard \ RunTests)))

(executable
 (name RunTests)
 (libraries TestE2E)
 (modules RunTests))
