(library
 (name TestE2E)
 (ocamlopt_flags -linkall -g)
 (libraries EsyLib EsyPackageConfig rely.lib logs logs.cli cmdliner bos fmt
   fmt.cli fmt.tty rresult)
 (preprocess
  (pps
   lwt_ppx
   ppx_let
   ppx_deriving.std
   ppx_deriving_yojson
   ppx_expect
   ppx_inline_test
   ppx_sexp_conv))
 (modules
  (:standard \ RunTests)))

(executable
 (name RunTests)
 (libraries TestE2E)
 (modules RunTests))
