(library
 (name esy_logs)
 (modules esy_logs))

(library
 (name esy_logs_fmt)
 (modules esy_logs_fmt)
 (libraries esy_logs esy_fmt))

(library
 (name esy_logs_cli)
 (modules esy_logs_cli)
 (libraries esy_logs esy_cmdliner))

(library
 (name esy_logs_lwt)
 (libraries esy_logs lwt)
 (modules esy_logs_lwt))
